# GameSolver

./: .gitignore  CMakeLists.txt  GameSolver.sln  README.md  game_solver.py  setup.py
Debug/: GameSolver.ilk
GameSolver/: Game.cpp  Game.h  GameSolver.cpp  GameSolver.vcxproj  GameSolver.vcxproj.filters  __init__.py
GameSolver/Debug/: vc141.idb
GameSolver/Debug/GameSolver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameSolver.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: GameSolver.h
src/: Game.cpp  Game.h  GameSolver.cpp  GameSolver.h
test/: game_solver_test.cpp  matrix.csv  test.cpp  test.py
